[package]
name = "libgpiod"
version = "0.1.0"
authors = ["Joao Rebelo <2730147+jrebelo@users.noreply.github.com>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.nix]
version = "0.24"
default-features = false
features = ["ioctl"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["fs", "io-util"]
optional = true

[dependencies.async-std]
version = "1"
optional = true

[features]
default = ["v2"]
v2 = []
doc-cfg = []

[package.metadata.docs.rs]
features = ["doc-cfg", "v2", "tokio"]
