[package]
name = "gpiod"
description = "Linux GPIO character device interfacing"
version = "0.2.0"
authors = ["Joao Rebelo <2730147+jrebelo@users.noreply.github.com>", "K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"

[dependencies.nix]
version = "0.24"
default-features = false
features = ["ioctl"]

[dependencies.tokio]
version = "1"
default-features = false
features = ["fs", "io-util"]
optional = true

[dependencies.async-std]
version = "1"
optional = true

[features]
default = ["v2"]
v2 = []
doc-cfg = []

[package.metadata.docs.rs]
features = ["doc-cfg", "v2", "tokio"]
